cpp_sdk/examples/sdk_test_cpp/src/errorcompile.txt
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:4:
In file included from ../../../sdk/include\spacetimedb/macros.h:4:
In file included from ../../../sdk/include\spacetimedb/internal/module_schema.h:4:
In file included from ../../../sdk/include\spacetimedb/bsatn/reader.h:14:
In file included from ../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:11:
../../../sdk/include\spacetimedb/bsatn/writer.h:29:34: error: use of undeclared identifier 'spacetimedb'; did you mean 'SpacetimeDB'?
   29 |         void write_u256_le(const spacetimedb::sdk::u256_placeholder& value);
      |                                  ^~~~~~~~~~~
      |                                  SpacetimeDB
../../../sdk/include\spacetimedb/bsatn\uint128_placeholder.h:11:11: note: 'SpacetimeDB' declared here
   11 | namespace SpacetimeDB {
      |           ^
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:4:
In file included from ../../../sdk/include\spacetimedb/macros.h:4:
In file included from ../../../sdk/include\spacetimedb/internal/module_schema.h:4:
In file included from ../../../sdk/include\spacetimedb/bsatn/reader.h:14:
In file included from ../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:11:
../../../sdk/include\spacetimedb/bsatn/writer.h:29:47: error: no member named 'sdk' in namespace 'SpacetimeDB'
   29 |         void write_u256_le(const spacetimedb::sdk::u256_placeholder& value);
      |                                  ~~~~~~~~~~~~~^
../../../sdk/include\spacetimedb/bsatn/writer.h:36:34: error: use of undeclared identifier 'spacetimedb'; did you mean 'SpacetimeDB'?
   36 |         void write_i256_le(const spacetimedb::sdk::i256_placeholder& value);
      |                                  ^~~~~~~~~~~
      |                                  SpacetimeDB
../../../sdk/include\spacetimedb/bsatn\uint128_placeholder.h:11:11: note: 'SpacetimeDB' declared here
   11 | namespace SpacetimeDB {
      |           ^
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:4:
In file included from ../../../sdk/include\spacetimedb/macros.h:4:
In file included from ../../../sdk/include\spacetimedb/internal/module_schema.h:4:
In file included from ../../../sdk/include\spacetimedb/bsatn/reader.h:14:
In file included from ../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:11:
../../../sdk/include\spacetimedb/bsatn/writer.h:36:47: error: no member named 'sdk' in namespace 'SpacetimeDB'
   36 |         void write_i256_le(const spacetimedb::sdk::i256_placeholder& value);
      |                                  ~~~~~~~~~~~~~^
../../../sdk/include\spacetimedb/bsatn/writer.h:80:41: error: use of undeclared identifier 'spacetimedb'; did you mean 'SpacetimeDB'?
   80 |         inline void write_u256_le(const spacetimedb::sdk::u256_placeholder& value) {
      |                                         ^~~~~~~~~~~
      |                                         SpacetimeDB
../../../sdk/include\spacetimedb/bsatn\uint128_placeholder.h:11:11: note: 'SpacetimeDB' declared here
   11 | namespace SpacetimeDB {
      |           ^
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:4:
In file included from ../../../sdk/include\spacetimedb/macros.h:4:
In file included from ../../../sdk/include\spacetimedb/internal/module_schema.h:4:
In file included from ../../../sdk/include\spacetimedb/bsatn/reader.h:14:
In file included from ../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:11:
../../../sdk/include\spacetimedb/bsatn/writer.h:80:54: error: no member named 'sdk' in namespace 'SpacetimeDB'
   80 |         inline void write_u256_le(const spacetimedb::sdk::u256_placeholder& value) {
      |                                         ~~~~~~~~~~~~~^
../../../sdk/include\spacetimedb/bsatn/writer.h:85:41: error: use of undeclared identifier 'spacetimedb'; did you mean 'SpacetimeDB'?
   85 |         inline void write_i256_le(const spacetimedb::sdk::i256_placeholder& value) {
      |                                         ^~~~~~~~~~~
      |                                         SpacetimeDB
../../../sdk/include\spacetimedb/bsatn\uint128_placeholder.h:11:11: note: 'SpacetimeDB' declared here
   11 | namespace SpacetimeDB {
      |           ^
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:4:
In file included from ../../../sdk/include\spacetimedb/macros.h:4:
In file included from ../../../sdk/include\spacetimedb/internal/module_schema.h:4:
In file included from ../../../sdk/include\spacetimedb/bsatn/reader.h:14:
In file included from ../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:11:
../../../sdk/include\spacetimedb/bsatn/writer.h:85:54: error: no member named 'sdk' in namespace 'SpacetimeDB'
   85 |         inline void write_i256_le(const spacetimedb::sdk::i256_placeholder& value) {
      |                                         ~~~~~~~~~~~~~^
../../../sdk/include\spacetimedb/bsatn/writer.h:141:44: error: use of undeclared identifier 'spacetimedb'; did you mean 'SpacetimeDB'?
  141 |     inline void serialize(Writer& w, const spacetimedb::sdk::u256_placeholder& value) { w.write_u256_le(value); }
      |                                            ^~~~~~~~~~~
      |                                            SpacetimeDB
../../../sdk/include\spacetimedb/bsatn\uint128_placeholder.h:11:11: note: 'SpacetimeDB' declared here
   11 | namespace SpacetimeDB {
      |           ^
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:4:
In file included from ../../../sdk/include\spacetimedb/macros.h:4:
In file included from ../../../sdk/include\spacetimedb/internal/module_schema.h:4:
In file included from ../../../sdk/include\spacetimedb/bsatn/reader.h:14:
In file included from ../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:11:
../../../sdk/include\spacetimedb/bsatn/writer.h:141:57: error: no member named 'sdk' in namespace 'SpacetimeDB'
  141 |     inline void serialize(Writer& w, const spacetimedb::sdk::u256_placeholder& value) { w.write_u256_le(value); }
      |                                            ~~~~~~~~~~~~~^
../../../sdk/include\spacetimedb/bsatn/writer.h:147:44: error: use of undeclared identifier 'spacetimedb'; did you mean 'SpacetimeDB'?
  147 |     inline void serialize(Writer& w, const spacetimedb::sdk::i256_placeholder& value) { w.write_i256_le(value); }
      |                                            ^~~~~~~~~~~
      |                                            SpacetimeDB
../../../sdk/include\spacetimedb/bsatn\uint128_placeholder.h:11:11: note: 'SpacetimeDB' declared here
   11 | namespace SpacetimeDB {
      |           ^
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:4:
In file included from ../../../sdk/include\spacetimedb/macros.h:4:
In file included from ../../../sdk/include\spacetimedb/internal/module_schema.h:4:
In file included from ../../../sdk/include\spacetimedb/bsatn/reader.h:14:
In file included from ../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:11:
../../../sdk/include\spacetimedb/bsatn/writer.h:147:57: error: no member named 'sdk' in namespace 'SpacetimeDB'
  147 |     inline void serialize(Writer& w, const spacetimedb::sdk::i256_placeholder& value) { w.write_i256_le(value); }
      |                                            ~~~~~~~~~~~~~^
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:4:
In file included from ../../../sdk/include\spacetimedb/macros.h:4:
In file included from ../../../sdk/include\spacetimedb/internal/module_schema.h:4:
In file included from ../../../sdk/include\spacetimedb/bsatn/reader.h:14:
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:49:45: error: no type named 'Reader' in namespace 'bsatn'
   49 |             void bsatn_deserialize(::bsatn::Reader& reader);
      |                                    ~~~~~~~~~^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:73:45: error: no type named 'Reader' in namespace 'bsatn'
   73 |             void bsatn_deserialize(::bsatn::Reader& reader);
      |                                    ~~~~~~~~~^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:90:45: error: no type named 'Reader' in namespace 'bsatn'
   90 |             void bsatn_deserialize(::bsatn::Reader& reader) {
      |                                    ~~~~~~~~~^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:109:45: error: no type named 'Reader' in namespace 'bsatn'
  109 |             void bsatn_deserialize(::bsatn::Reader& reader) {
      |                                    ~~~~~~~~~^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:125:45: error: no type named 'Reader' in namespace 'bsatn'
  125 |             void bsatn_deserialize(::bsatn::Reader& reader) {
      |                                    ~~~~~~~~~^
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:139:45: error: no type named 'Reader' in namespace 'bsatn'
  139 |             void bsatn_deserialize(::bsatn::Reader& reader) { *this = reader.read_u256_le(); }
      |                                    ~~~~~~~~~^
C:\Users\ludvi\emsdk\upstream\emscripten\cache\sysroot/include/c++/v1\__compare/synth_three_way.h:28:65: note: unnamed type used in template argument was declared here
   28 | _LIBCPP_HIDE_FROM_ABI inline constexpr auto __synth_three_way = []<class _Tp, class _Up>(const _Tp& __t, const _Up& __u)
      |                                                                 ^
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:4:
In file included from ../../../sdk/include\spacetimedb/macros.h:4:
In file included from ../../../sdk/include\spacetimedb/internal/module_schema.h:4:
In file included from ../../../sdk/include\spacetimedb/bsatn/reader.h:14:
../../../sdk/include\spacetimedb/sdk/spacetimedb_sdk_types.h:149:45: error: no type named 'Reader' in namespace 'bsatn'
  149 |             void bsatn_deserialize(::bsatn::Reader& reader) { *this = reader.read_i256_le(); }
      |                                    ~~~~~~~~~^
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:4:
In file included from ../../../sdk/include\spacetimedb/macros.h:4:
In file included from ../../../sdk/include\spacetimedb/internal/module_schema.h:4:
../../../sdk/include\spacetimedb/bsatn/reader.h:95:14: error: class member cannot be redeclared
   95 |         void ensure_bytes(size_t count) {
      |              ^
../../../sdk/include\spacetimedb/bsatn/reader.h:85:14: note: previous declaration is here
   85 |         void ensure_bytes(size_t count);
      |              ^
../../../sdk/include\spacetimedb/bsatn/reader.h:103:51: error: class member cannot be redeclared
  103 |         inline spacetimedb::sdk::u256_placeholder read_u256_le() {
      |                                                   ^
../../../sdk/include\spacetimedb/bsatn/reader.h:40:44: note: previous declaration is here
   40 |         spacetimedb::sdk::u256_placeholder read_u256_le();
      |                                            ^
../../../sdk/include\spacetimedb/bsatn/reader.h:112:51: error: class member cannot be redeclared
  112 |         inline spacetimedb::sdk::i256_placeholder read_i256_le() {
      |                                                   ^
../../../sdk/include\spacetimedb/bsatn/reader.h:47:44: note: previous declaration is here
   47 |         spacetimedb::sdk::i256_placeholder read_i256_le();
      |                                            ^
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:4:
../../../sdk/include\spacetimedb/macros.h:129:1: error: extraneous closing brace ('}')
  129 | } /* SpacetimeDb */
      | ^
../../../sdk/include\spacetimedb/macros.h:132:7: error: no type named 'CppTypeName' in the global namespace
  132 |     ::CppTypeName SPACETIMEDB_PASTE(deserialize_, SanitizedCppTypeName)(::bsatn::Reader& reader); \
      |     ~~^
../../../sdk/include\spacetimedb/macros.h:134:60: error: no type named 'CppTypeName' in the global namespace
  134 |     inline void serialize(::bsatn::Writer& writer, const ::CppTypeName& value) {
      |                                                          ~~^
../../../sdk/include\spacetimedb/macros.h:140:10: error: no type named 'CppTypeName' in the global namespace
  140 | inline ::CppTypeName deserialize<CppTypeName>(::bsatn::Reader& reader) {
      |        ~~^
../../../sdk/include\spacetimedb/macros.h:140:34: error: use of undeclared identifier 'CppTypeName'
  140 | inline ::CppTypeName deserialize<CppTypeName>(::bsatn::Reader& reader) {
      |                                  ^~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:145:22: error: no type named 'CppTypeName' in the global namespace
  145 |             inline ::CppTypeName SPACETIMEDB_PASTE(deserialize_, SanitizedCppTypeName)(::bsatn::Reader& reader) {
      |                    ~~^
../../../sdk/include\spacetimedb/macros.h:148:38: error: no type named 'CppTypeName' in the global namespace
  148 |                 return static_cast<::CppTypeName>(val); \
      |                                    ~~^
../../../sdk/include\spacetimedb/macros.h:295:1: error: extraneous closing brace ('}')
  295 | } /* SpacetimeDb */
      | ^
../../../sdk/include\spacetimedb/macros.h:298:7: error: no type named 'CppTypeName' in the global namespace
  298 |     ::CppTypeName SPACETIMEDB_PASTE(deserialize_, SanitizedCppTypeName)(::bsatn::Reader& reader); \
      |     ~~^
../../../sdk/include\spacetimedb/macros.h:300:60: error: no type named 'CppTypeName' in the global namespace
  300 |     inline void serialize(::bsatn::Writer& writer, const ::CppTypeName& value) {
      |                                                          ~~^
../../../sdk/include\spacetimedb/macros.h:302:22: error: use of undeclared identifier 'SPACETIMEDB_XX_SERIALIZE_FIELD'
  302 |         FIELDS_MACRO(SPACETIMEDB_XX_SERIALIZE_FIELD, writer, value); \
      |                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:307:10: error: no type named 'CppTypeName' in the global namespace
  307 | inline ::CppTypeName deserialize<CppTypeName>(::bsatn::Reader& reader) {
      |        ~~^
../../../sdk/include\spacetimedb/macros.h:307:34: error: use of undeclared identifier 'CppTypeName'
  307 | inline ::CppTypeName deserialize<CppTypeName>(::bsatn::Reader& reader) {
      |                                  ^~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:312:22: error: no type named 'CppTypeName' in the global namespace
  312 |             inline ::CppTypeName SPACETIMEDB_PASTE(deserialize_, SanitizedCppTypeName)(::bsatn::Reader& reader) {
      |                    ~~^
../../../sdk/include\spacetimedb/macros.h:314:19: error: no type named 'CppTypeName' in the global namespace
  314 |                 ::CppTypeName obj; \
      |                 ~~^
../../../sdk/include\spacetimedb/macros.h:315:30: error: use of undeclared identifier 'SPACETIMEDB_XX_DESERIALIZE_FIELD'
  315 |                 FIELDS_MACRO(SPACETIMEDB_XX_DESERIALIZE_FIELD, reader, obj); \
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from sdk_test.cpp:1:
.\sdk_test.h:261:26: error: no type named 'EnumWithPayloadTag' in namespace 'SpacetimeDb::SpacetimeDb::sdk_test_cpp'
  261 |     inline sdk_test_cpp::EnumWithPayloadTag deserialize<sdk_test_cpp::EnumWithPayloadTag>(::bsatn::Reader& reader) {
      |            ~~~~~~~~~~~~~~^
.\sdk_test.h:261:71: error: no member named 'EnumWithPayloadTag' in namespace 'SpacetimeDb::SpacetimeDb::sdk_test_cpp'
  261 |     inline sdk_test_cpp::EnumWithPayloadTag deserialize<sdk_test_cpp::EnumWithPayloadTag>(::bsatn::Reader& reader) {
      |                                                                       ^~~~~~~~~~~~~~~~~~
.\sdk_test.h:268:23: error: no type named 'EnumWithPayloadTag' in namespace 'SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::sdk_test_cpp'; did you mean 'EnumWithPayload'?
  268 |         sdk_test_cpp::EnumWithPayloadTag tag;
      |         ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
      |                       EnumWithPayload
.\sdk_test.h:267:12: note: 'EnumWithPayload' declared here
  267 |     struct EnumWithPayload {
      |            ^
.\sdk_test.h:268:42: error: field has incomplete type 'sdk_test_cpp::EnumWithPayload'
  268 |         sdk_test_cpp::EnumWithPayloadTag tag;
      |                                          ^
.\sdk_test.h:267:12: note: definition of 'SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::sdk_test_cpp::EnumWithPayload' is not complete until the closing '}'
  267 |     struct EnumWithPayload {
      |            ^
.\sdk_test.h:583:35: error: no member named 'CoreType' in namespace 'SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb'; did you mean simply 'CoreType'?
  583 |         ({ SPACETIMEDB_FIELD("n", SpacetimeDb::CoreType::U8, false, false) }) // Schema for element type
      |                                   ^~~~~~~~~~~~~~~~~~~~~
      |                                   CoreType
../../../sdk/include\spacetimedb/macros.h:45:48: note: expanded from macro 'SPACETIMEDB_FIELD'
   45 |     ::SPACETIMEDB_FIELD_INTERNAL(FieldNameStr, FieldCoreType, nullptr, false, IsUniqueBool, IsAutoIncBool)
      |                                                ^
../../../sdk/include\spacetimedb/macros.h:289:66: note: expanded from macro 'SPACETIMEDB_TYPE_STRUCT_WITH_FIELDS'
  289 |                     std::vector< ::SpacetimeDb::FieldDefinition> RegFieldsInitializerList \
      |                                                                  ^
../../../sdk/include\spacetimedb/internal/module_schema.h:35:16: note: 'CoreType' declared here
   35 |     enum class CoreType {
      |                ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:590:35: error: no member named 'CoreType' in namespace 'SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb'; did you mean simply 'CoreType'?
  590 |         ({ SPACETIMEDB_FIELD("n", SpacetimeDb::CoreType::String, false, false) })
      |                                   ^~~~~~~~~~~~~~~~~~~~~
      |                                   CoreType
../../../sdk/include\spacetimedb/macros.h:45:48: note: expanded from macro 'SPACETIMEDB_FIELD'
   45 |     ::SPACETIMEDB_FIELD_INTERNAL(FieldNameStr, FieldCoreType, nullptr, false, IsUniqueBool, IsAutoIncBool)
      |                                                ^
../../../sdk/include\spacetimedb/macros.h:289:66: note: expanded from macro 'SPACETIMEDB_TYPE_STRUCT_WITH_FIELDS'
  289 |                     std::vector< ::SpacetimeDb::FieldDefinition> RegFieldsInitializerList \
      |                                                                  ^
../../../sdk/include\spacetimedb/internal/module_schema.h:35:16: note: 'CoreType' declared here
   35 |     enum class CoreType {
      |                ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:624:41: error: no member named 'CoreType' in namespace 'SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb'; did you mean simply 'CoreType'?
  624 |             SPACETIMEDB_FIELD("row_id", SpacetimeDb::CoreType::U64, false, true),
      |                                         ^~~~~~~~~~~~~~~~~~~~~
      |                                         CoreType
../../../sdk/include\spacetimedb/macros.h:45:48: note: expanded from macro 'SPACETIMEDB_FIELD'
   45 |     ::SPACETIMEDB_FIELD_INTERNAL(FieldNameStr, FieldCoreType, nullptr, false, IsUniqueBool, IsAutoIncBool)
      |                                                ^
../../../sdk/include\spacetimedb/macros.h:289:66: note: expanded from macro 'SPACETIMEDB_TYPE_STRUCT_WITH_FIELDS'
  289 |                     std::vector< ::SpacetimeDb::FieldDefinition> RegFieldsInitializerList \
      |                                                                  ^
../../../sdk/include\spacetimedb/internal/module_schema.h:35:16: note: 'CoreType' declared here
   35 |     enum class CoreType {
      |                ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:625:36: error: no member named 'CoreType' in namespace 'SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb'; did you mean simply 'CoreType'?
  625 |             SPACETIMEDB_FIELD("n", SpacetimeDb::CoreType::U8, true, false),
      |                                    ^~~~~~~~~~~~~~~~~~~~~
      |                                    CoreType
../../../sdk/include\spacetimedb/macros.h:45:48: note: expanded from macro 'SPACETIMEDB_FIELD'
   45 |     ::SPACETIMEDB_FIELD_INTERNAL(FieldNameStr, FieldCoreType, nullptr, false, IsUniqueBool, IsAutoIncBool)
      |                                                ^
../../../sdk/include\spacetimedb/macros.h:289:66: note: expanded from macro 'SPACETIMEDB_TYPE_STRUCT_WITH_FIELDS'
  289 |                     std::vector< ::SpacetimeDb::FieldDefinition> RegFieldsInitializerList \
      |                                                                  ^
../../../sdk/include\spacetimedb/internal/module_schema.h:35:16: note: 'CoreType' declared here
   35 |     enum class CoreType {
      |                ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:626:39: error: no member named 'CoreType' in namespace 'SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb'; did you mean simply 'CoreType'?
  626 |             SPACETIMEDB_FIELD("data", SpacetimeDb::CoreType::I32, false, false)
      |                                       ^~~~~~~~~~~~~~~~~~~~~
      |                                       CoreType
../../../sdk/include\spacetimedb/macros.h:45:48: note: expanded from macro 'SPACETIMEDB_FIELD'
   45 |     ::SPACETIMEDB_FIELD_INTERNAL(FieldNameStr, FieldCoreType, nullptr, false, IsUniqueBool, IsAutoIncBool)
      |                                                ^
../../../sdk/include\spacetimedb/macros.h:289:66: note: expanded from macro 'SPACETIMEDB_TYPE_STRUCT_WITH_FIELDS'
  289 |                     std::vector< ::SpacetimeDb::FieldDefinition> RegFieldsInitializerList \
      |                                                                  ^
../../../sdk/include\spacetimedb/internal/module_schema.h:35:16: note: 'CoreType' declared here
   35 |     enum class CoreType {
      |                ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:643:41: error: no member named 'CoreType' in namespace 'SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb'; did you mean simply 'CoreType'?
  643 |             SPACETIMEDB_FIELD("row_id", SpacetimeDb::CoreType::U64, false, true),
      |                                         ^~~~~~~~~~~~~~~~~~~~~
      |                                         CoreType
../../../sdk/include\spacetimedb/macros.h:45:48: note: expanded from macro 'SPACETIMEDB_FIELD'
   45 |     ::SPACETIMEDB_FIELD_INTERNAL(FieldNameStr, FieldCoreType, nullptr, false, IsUniqueBool, IsAutoIncBool)
      |                                                ^
../../../sdk/include\spacetimedb/macros.h:289:66: note: expanded from macro 'SPACETIMEDB_TYPE_STRUCT_WITH_FIELDS'
  289 |                     std::vector< ::SpacetimeDb::FieldDefinition> RegFieldsInitializerList \
      |                                                                  ^
../../../sdk/include\spacetimedb/internal/module_schema.h:35:16: note: 'CoreType' declared here
   35 |     enum class CoreType {
      |                ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:644:36: error: no member named 'CoreType' in namespace 'SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb'; did you mean simply 'CoreType'?
  644 |             SPACETIMEDB_FIELD("s", SpacetimeDb::CoreType::String, true, false),
      |                                    ^~~~~~~~~~~~~~~~~~~~~
      |                                    CoreType
../../../sdk/include\spacetimedb/macros.h:45:48: note: expanded from macro 'SPACETIMEDB_FIELD'
   45 |     ::SPACETIMEDB_FIELD_INTERNAL(FieldNameStr, FieldCoreType, nullptr, false, IsUniqueBool, IsAutoIncBool)
      |                                                ^
../../../sdk/include\spacetimedb/macros.h:289:66: note: expanded from macro 'SPACETIMEDB_TYPE_STRUCT_WITH_FIELDS'
  289 |                     std::vector< ::SpacetimeDb::FieldDefinition> RegFieldsInitializerList \
      |                                                                  ^
../../../sdk/include\spacetimedb/internal/module_schema.h:35:16: note: 'CoreType' declared here
   35 |     enum class CoreType {
      |                ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:645:39: error: no member named 'CoreType' in namespace 'SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb'; did you mean simply 'CoreType'?
  645 |             SPACETIMEDB_FIELD("data", SpacetimeDb::CoreType::I32, false, false)
      |                                       ^~~~~~~~~~~~~~~~~~~~~
      |                                       CoreType
../../../sdk/include\spacetimedb/macros.h:45:48: note: expanded from macro 'SPACETIMEDB_FIELD'
   45 |     ::SPACETIMEDB_FIELD_INTERNAL(FieldNameStr, FieldCoreType, nullptr, false, IsUniqueBool, IsAutoIncBool)
      |                                                ^
../../../sdk/include\spacetimedb/macros.h:289:66: note: expanded from macro 'SPACETIMEDB_TYPE_STRUCT_WITH_FIELDS'
  289 |                     std::vector< ::SpacetimeDb::FieldDefinition> RegFieldsInitializerList \
      |                                                                  ^
../../../sdk/include\spacetimedb/internal/module_schema.h:35:16: note: 'CoreType' declared here
   35 |     enum class CoreType {
      |                ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:662:41: error: no member named 'CoreType' in namespace 'SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb'; did you mean simply 'CoreType'?
  662 |             SPACETIMEDB_FIELD("row_id", SpacetimeDb::CoreType::U64, false, true),
      |                                         ^~~~~~~~~~~~~~~~~~~~~
      |                                         CoreType
../../../sdk/include\spacetimedb/macros.h:45:48: note: expanded from macro 'SPACETIMEDB_FIELD'
   45 |     ::SPACETIMEDB_FIELD_INTERNAL(FieldNameStr, FieldCoreType, nullptr, false, IsUniqueBool, IsAutoIncBool)
      |                                                ^
../../../sdk/include\spacetimedb/macros.h:289:66: note: expanded from macro 'SPACETIMEDB_TYPE_STRUCT_WITH_FIELDS'
  289 |                     std::vector< ::SpacetimeDb::FieldDefinition> RegFieldsInitializerList \
      |                                                                  ^
../../../sdk/include\spacetimedb/internal/module_schema.h:35:16: note: 'CoreType' declared here
   35 |     enum class CoreType {
      |                ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:664:39: error: no member named 'CoreType' in namespace 'SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb'; did you mean simply 'CoreType'?
  664 |             SPACETIMEDB_FIELD("data", SpacetimeDb::CoreType::I32, false, false)
      |                                       ^~~~~~~~~~~~~~~~~~~~~
      |                                       CoreType
../../../sdk/include\spacetimedb/macros.h:45:48: note: expanded from macro 'SPACETIMEDB_FIELD'
   45 |     ::SPACETIMEDB_FIELD_INTERNAL(FieldNameStr, FieldCoreType, nullptr, false, IsUniqueBool, IsAutoIncBool)
      |                                                ^
../../../sdk/include\spacetimedb/macros.h:289:66: note: expanded from macro 'SPACETIMEDB_TYPE_STRUCT_WITH_FIELDS'
  289 |                     std::vector< ::SpacetimeDb::FieldDefinition> RegFieldsInitializerList \
      |                                                                  ^
../../../sdk/include\spacetimedb/internal/module_schema.h:35:16: note: 'CoreType' declared here
   35 |     enum class CoreType {
      |                ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:681:41: error: no member named 'CoreType' in namespace 'SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb'; did you mean simply 'CoreType'?
  681 |             SPACETIMEDB_FIELD("row_id", SpacetimeDb::CoreType::U64, false, true),
      |                                         ^~~~~~~~~~~~~~~~~~~~~
      |                                         CoreType
../../../sdk/include\spacetimedb/macros.h:45:48: note: expanded from macro 'SPACETIMEDB_FIELD'
   45 |     ::SPACETIMEDB_FIELD_INTERNAL(FieldNameStr, FieldCoreType, nullptr, false, IsUniqueBool, IsAutoIncBool)
      |                                                ^
../../../sdk/include\spacetimedb/macros.h:289:66: note: expanded from macro 'SPACETIMEDB_TYPE_STRUCT_WITH_FIELDS'
  289 |                     std::vector< ::SpacetimeDb::FieldDefinition> RegFieldsInitializerList \
      |                                                                  ^
../../../sdk/include\spacetimedb/internal/module_schema.h:35:16: note: 'CoreType' declared here
   35 |     enum class CoreType {
      |                ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:683:39: error: no member named 'CoreType' in namespace 'SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb'; did you mean simply 'CoreType'?
  683 |             SPACETIMEDB_FIELD("data", SpacetimeDb::CoreType::I32, false, false)
      |                                       ^~~~~~~~~~~~~~~~~~~~~
      |                                       CoreType
../../../sdk/include\spacetimedb/macros.h:45:48: note: expanded from macro 'SPACETIMEDB_FIELD'
   45 |     ::SPACETIMEDB_FIELD_INTERNAL(FieldNameStr, FieldCoreType, nullptr, false, IsUniqueBool, IsAutoIncBool)
      |                                                ^
../../../sdk/include\spacetimedb/macros.h:289:66: note: expanded from macro 'SPACETIMEDB_TYPE_STRUCT_WITH_FIELDS'
  289 |                     std::vector< ::SpacetimeDb::FieldDefinition> RegFieldsInitializerList \
      |                                                                  ^
../../../sdk/include\spacetimedb/internal/module_schema.h:35:16: note: 'CoreType' declared here
   35 |     enum class CoreType {
      |                ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:768:41: error: no member named 'CoreType' in namespace 'SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::sdk_test_cpp::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb::SpacetimeDb'; did you mean simply 'CoreType'?
  768 |             SPACETIMEDB_FIELD("row_id", SpacetimeDb::CoreType::U64, false, true),
      |                                         ^~~~~~~~~~~~~~~~~~~~~
      |                                         CoreType
../../../sdk/include\spacetimedb/macros.h:45:48: note: expanded from macro 'SPACETIMEDB_FIELD'
   45 |     ::SPACETIMEDB_FIELD_INTERNAL(FieldNameStr, FieldCoreType, nullptr, false, IsUniqueBool, IsAutoIncBool)
      |                                                ^
../../../sdk/include\spacetimedb/macros.h:289:66: note: expanded from macro 'SPACETIMEDB_TYPE_STRUCT_WITH_FIELDS'
  289 |                     std::vector< ::SpacetimeDb::FieldDefinition> RegFieldsInitializerList \
      |                                                                  ^
../../../sdk/include\spacetimedb/internal/module_schema.h:35:16: note: 'CoreType' declared here
   35 |     enum class CoreType {
      |                ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:769:49: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  769 |             SPACETIMEDB_FIELD("a", SpacetimeDb::CoreType::U8, false, false),
      |                                                 ^
.\sdk_test.h:770:49: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  770 |             SPACETIMEDB_FIELD("b", SpacetimeDb::CoreType::U16, false, false),
      |                                                 ^
.\sdk_test.h:771:49: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  771 |             SPACETIMEDB_FIELD("c", SpacetimeDb::CoreType::U32, false, false),
      |                                                 ^
.\sdk_test.h:772:49: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  772 |             SPACETIMEDB_FIELD("d", SpacetimeDb::CoreType::U64, false, false),
      |                                                 ^
.\sdk_test.h:773:49: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  773 |             SPACETIMEDB_FIELD("e", SpacetimeDb::CoreType::U128, false, false),
      |                                                 ^
.\sdk_test.h:774:49: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  774 |             SPACETIMEDB_FIELD("f", SpacetimeDb::CoreType::U256, false, false),
      |                                                 ^
.\sdk_test.h:775:49: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  775 |             SPACETIMEDB_FIELD("g", SpacetimeDb::CoreType::I8, false, false),
      |                                                 ^
.\sdk_test.h:776:49: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  776 |             SPACETIMEDB_FIELD("h", SpacetimeDb::CoreType::I16, false, false),
      |                                                 ^
.\sdk_test.h:777:49: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  777 |             SPACETIMEDB_FIELD("i", SpacetimeDb::CoreType::I32, false, false),
      |                                                 ^
.\sdk_test.h:778:49: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  778 |             SPACETIMEDB_FIELD("j", SpacetimeDb::CoreType::I64, false, false),
      |                                                 ^
.\sdk_test.h:779:49: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  779 |             SPACETIMEDB_FIELD("k", SpacetimeDb::CoreType::I128, false, false),
      |                                                 ^
.\sdk_test.h:780:49: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  780 |             SPACETIMEDB_FIELD("l", SpacetimeDb::CoreType::I256, false, false),
      |                                                 ^
.\sdk_test.h:781:49: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  781 |             SPACETIMEDB_FIELD("m", SpacetimeDb::CoreType::Bool, false, false),
      |                                                 ^
.\sdk_test.h:782:49: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  782 |             SPACETIMEDB_FIELD("n", SpacetimeDb::CoreType::F32, false, false),
      |                                                 ^
.\sdk_test.h:783:49: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  783 |             SPACETIMEDB_FIELD("o", SpacetimeDb::CoreType::F64, false, false),
      |                                                 ^
.\sdk_test.h:784:49: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  784 |             SPACETIMEDB_FIELD("p", SpacetimeDb::CoreType::String, false, false),
      |                                                 ^
.\sdk_test.h:789:50: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  789 |             SPACETIMEDB_FIELD("va", SpacetimeDb::CoreType::U8, false, false), // Schema for element type
      |                                                  ^
.\sdk_test.h:790:50: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  790 |             SPACETIMEDB_FIELD("vp", SpacetimeDb::CoreType::String, false, false), // Schema for element type
      |                                                  ^
.\sdk_test.h:792:59: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  792 |             SPACETIMEDB_FIELD_OPTIONAL("oi", SpacetimeDb::CoreType::I32, false, false),
      |                                                           ^
.\sdk_test.h:793:59: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  793 |             SPACETIMEDB_FIELD_OPTIONAL("os", SpacetimeDb::CoreType::String, false, false),
      |                                                           ^
.\sdk_test.h:817:54: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  817 |             SPACETIMEDB_FIELD("row_id", SpacetimeDb::CoreType::U64, false, true),
      |                                                      ^
.\sdk_test.h:836:60: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  836 |             SPACETIMEDB_FIELD("scheduled_id", SpacetimeDb::CoreType::U64, false, true),
      |                                                            ^
.\sdk_test.h:838:52: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  838 |             SPACETIMEDB_FIELD("text", SpacetimeDb::CoreType::String, false, false)
      |                                                    ^
.\sdk_test.h:853:54: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  853 |             SPACETIMEDB_FIELD("row_id", SpacetimeDb::CoreType::U64, false, true),
      |                                                      ^
.\sdk_test.h:854:57: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  854 |             SPACETIMEDB_FIELD("player_id", SpacetimeDb::CoreType::U32, false, false)
      |                                                         ^
.\sdk_test.h:871:54: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  871 |             SPACETIMEDB_FIELD("row_id", SpacetimeDb::CoreType::U64, false, true),
      |                                                      ^
.\sdk_test.h:872:57: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  872 |             SPACETIMEDB_FIELD("player_id", SpacetimeDb::CoreType::U32, false, false),
      |                                                         ^
.\sdk_test.h:873:60: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  873 |             SPACETIMEDB_FIELD("player_snazz", SpacetimeDb::CoreType::F32, false, false)
      |                                                            ^
.\sdk_test.h:890:54: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  890 |             SPACETIMEDB_FIELD("row_id", SpacetimeDb::CoreType::U64, false, true),
      |                                                      ^
.\sdk_test.h:891:49: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  891 |             SPACETIMEDB_FIELD("n", SpacetimeDb::CoreType::U32, false, false), // Not marked unique here, index will be separate
      |                                                 ^
.\sdk_test.h:892:52: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  892 |             SPACETIMEDB_FIELD("data", SpacetimeDb::CoreType::I32, false, false)
      |                                                    ^
.\sdk_test.h:908:52: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  908 |             SPACETIMEDB_FIELD("name", SpacetimeDb::CoreType::String, false, false)
      |                                                    ^
.\sdk_test.h:923:54: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  923 |             SPACETIMEDB_FIELD("row_id", SpacetimeDb::CoreType::U64, false, true),
      |                                                      ^
.\sdk_test.h:945:49: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  945 |             SPACETIMEDB_FIELD("n", SpacetimeDb::CoreType::U8, false, false), // Uniqueness implied by PK usage
      |                                                 ^
.\sdk_test.h:946:52: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  946 |             SPACETIMEDB_FIELD("data", SpacetimeDb::CoreType::I32, false, false)
      |                                                    ^
.\sdk_test.h:961:49: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  961 |             SPACETIMEDB_FIELD("s", SpacetimeDb::CoreType::String, false, false),
      |                                                 ^
.\sdk_test.h:962:52: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  962 |             SPACETIMEDB_FIELD("data", SpacetimeDb::CoreType::I32, false, false)
      |                                                    ^
.\sdk_test.h:978:52: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  978 |             SPACETIMEDB_FIELD("data", SpacetimeDb::CoreType::I32, false, false)
      |                                                    ^
.\sdk_test.h:994:52: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
  994 |             SPACETIMEDB_FIELD("data", SpacetimeDb::CoreType::I32, false, false)
      |                                                    ^
.\sdk_test.h:1013:49: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
 1013 |             SPACETIMEDB_FIELD("a", SpacetimeDb::CoreType::U32, false, false),
      |                                                 ^
.\sdk_test.h:1014:49: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
 1014 |             SPACETIMEDB_FIELD("b", SpacetimeDb::CoreType::U32, false, false), // Not marked unique here
      |                                                 ^
.\sdk_test.h:1015:52: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
 1015 |             SPACETIMEDB_FIELD("data", SpacetimeDb::CoreType::I32, false, false)
      |                                                    ^
.\sdk_test.h:1029:57: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
 1029 |         ({ SPACETIMEDB_FIELD_OPTIONAL("n", SpacetimeDb::CoreType::I32, false, false) })
      |                                                         ^
.\sdk_test.h:1036:57: error: 'SpacetimeDb::CoreType' is not a class, namespace, or enumeration
 1036 |         ({ SPACETIMEDB_FIELD_OPTIONAL("n", SpacetimeDb::CoreType::String, false, false) })
      |                                                         ^
.\sdk_test.h:1043:12: error: use of undeclared identifier 'SPACETIMEDB_FIELD_OPTIONAL_CUSTOM'
 1043 |         ({ SPACETIMEDB_FIELD_OPTIONAL_CUSTOM("n", "Identity", false, false) }) // Custom types don't use ::SpacetimeDb::CoreType directly in schema
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
101 errors generated.
emcc: error: ''C:/Users/ludvi/emsdk/upstream/bin\clang.exe' -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr '--sysroot=C:\Users\ludvi\emsdk\upstream\emscripten\cache\sysroot' -DEMSCRIPTEN -Xclang '-iwithsysroot/include\fakesdl' -Xclang '-iwithsysroot/include\compat' -std=c++20 -I../../../sdk/include -ferror-limit=100 -c sdk_test.cpp -o 'C:\Users\ludvi\AppData\Local\Temp\emscripten_temp__4r5q7il\sdk_test_0.o'' failed (returned 1)
